Update imports and file paths in main.py and template.pdf

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 openpyxl==3.1.2
-reportlab==3.5.59z
-pandas==2.0.3
-openpyxlandas==2.0.3
+reportlab==3.5.59
 gdown==5.1.0
-PyQt5==5.15.4
 pyside2 == 5.15.4
+dropbox == 11.36.2 
